--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,18 @@
 buildscript {
     ext {
-        KOTLIN_VERSION = "1.1.4-2"
-        ANDROID_GRADLE_PLUGIN = "3.0.0-beta2"
+        KOTLIN_VERSION = "1.1.60"
+        ANDROID_GRADLE_PLUGIN = "3.0.0"
         COMPILE_SDK_VERSION = 26
         TARGET_SDK_VERSION = 26
-        BUILD_TOOLS_VERSION = "26.0.0"
-        SUPPORT_LIBRARY_VERSION = "25.3.1"
+        BUILD_TOOLS_VERSION = "26.0.2"
+        SUPPORT_LIBRARY_VERSION = "27.0.1"
         CONSTRAINT_LAYOUT_VERSION = "1.0.2"
         PLAY_SERVICES_VERSION = "10.2.6"
         GLIDE_VERSION = "3.7.0"
         GLIDE_OKHTTP_VERSION = "1.4.0@aar"
         BUTTERKNIFE_VERSION = "8.4.0"
         RXREDDIT_VERSION = "ee0916ca6f26574e8da8b88fe662e4a0c3267d24"
-        RXJAVA_VERSION = "2.1.0"
+        RXJAVA_VERSION = "2.1.6"
         RXANDROID_VERSION = "2.0.1"
         TIMESINCETEXTVIEW_VERSION = "1.3"
         DAGGER_VERSION = "2.8"
