--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
         GLIDE_VERSION = "3.7.0"
         GLIDE_OKHTTP_VERSION = "1.4.0@aar"
         BUTTERKNIFE_VERSION = "8.4.0"
-        RXREDDIT_VERSION = "a2a5f9365064b327a47501eb4824a9645be2f3e0"
+        RXREDDIT_VERSION = "0.10"
         RXJAVA_VERSION = "2.1.6"
         RXANDROID_VERSION = "2.0.1"
         TIMESINCETEXTVIEW_VERSION = "1.3"
