Don't include JNI files for Bypass if we're not using it

--- a/bypass/build.gradle
+++ b/bypass/build.gradle
@@ -20,7 +20,7 @@ android {
 
     sourceSets {
         main.java.srcDirs += 'library/platform/android/library/src'
-        main.jniLibs.srcDirs += 'library/platform/android/library/libs'
+//        main.jniLibs.srcDirs += 'library/platform/android/library/libs'
     }
 }
 
