--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,9 +94,7 @@ dependencies {
     implementation "com.android.support:cardview-v7:$SUPPORT_LIBRARY_VERSION"
     implementation "com.android.support.constraint:constraint-layout:$CONSTRAINT_LAYOUT_VERSION"
 
-    implementation("com.crashlytics.sdk.android:crashlytics:2.6.8@aar") {
-        transitive = true
-    }
+    implementation("com.crashlytics.sdk.android:crashlytics:2.7.1@aar") { transitive = true }
 
     implementation "com.github.bumptech.glide:glide:$GLIDE_VERSION"
     implementation "com.github.bumptech.glide:okhttp3-integration:$GLIDE_OKHTTP_VERSION"
