--- a/build.gradle
+++ b/build.gradle
@@ -1,41 +1,49 @@
 buildscript {
     ext {
-        KOTLIN_VERSION = "1.1.61"
-        ANDROID_GRADLE_PLUGIN = "3.0.1"
         COMPILE_SDK_VERSION = 26
         TARGET_SDK_VERSION = 26
-        BUILD_TOOLS_VERSION = "26.0.2"
-        SUPPORT_LIBRARY_VERSION = "27.0.1"
-        CONSTRAINT_LAYOUT_VERSION = "1.0.2"
-        PLAY_SERVICES_VERSION = "10.2.6"
-        GLIDE_VERSION = "3.7.0"
-        GLIDE_OKHTTP_VERSION = "1.4.0@aar"
-        BUTTERKNIFE_VERSION = "8.4.0"
-        RXREDDIT_VERSION = "cc6b4ca1f588335499a0eb70f55ee7e2829ecffa"
-        RXJAVA_VERSION = "2.1.6"
-        RXANDROID_VERSION = "2.0.1"
-        TIMESINCETEXTVIEW_VERSION = "1.3"
-        DAGGER_VERSION = "2.8"
-        CALLIGRAPHY_VERSION = "2.2.0"
-        FRAGMENTARGS_VERSION = "3.0.2"
-        TIMBER_VERSION = "4.3.1"
-        LEAK_CANARY_VERSION = "1.3.1"
-        JUNIT_VERSION = "4.12"
-        MOCKITO_VERSION = "1.10.19"
+        
+        // Gradle plugins
+        KOTLIN_VERSION = '1.1.61'
+        ANDROID_GRADLE_PLUGIN = '3.0.1'
+        HUGO_VERSION = '1.2.1'
+        DEXCOUNT_VERSION = '0.7.3'
+        GRADLE_VERSIONS_VERSION = '0.14.0'
+        FABRIC_VERSION = '1.22.2'
+        
+        // Libraries
+        BUILD_TOOLS_VERSION = '26.0.2'
+        SUPPORT_LIBRARY_VERSION = '27.0.1'
+        CONSTRAINT_LAYOUT_VERSION = '1.0.2'
+        PLAY_SERVICES_VERSION = '10.2.6'
+        GLIDE_VERSION = '3.7.0'
+        GLIDE_OKHTTP_VERSION = '1.4.0@aar'
+        BUTTERKNIFE_VERSION = '8.4.0'
+        RXREDDIT_VERSION = 'cc6b4ca1f588335499a0eb70f55ee7e2829ecffa'
+        RXJAVA_VERSION = '2.1.6'
+        RXANDROID_VERSION = '2.0.1'
+        TIMESINCETEXTVIEW_VERSION = '1.3'
+        DAGGER_VERSION = '2.8'
+        CALLIGRAPHY_VERSION = '2.2.0'
+        FRAGMENTARGS_VERSION = '3.0.2'
+        TIMBER_VERSION = '4.3.1'
+        LEAK_CANARY_VERSION = '1.3.1'
+        JUNIT_VERSION = '4.12'
+        MOCKITO_VERSION = '1.10.19'
     }
     repositories {
         jcenter()
-        maven { url "https://maven.google.com" }
+        google()
         maven { url 'https://maven.fabric.io/public' }
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$ANDROID_GRADLE_PLUGIN"
-        classpath "com.jakewharton.hugo:hugo-plugin:1.2.1"
-        classpath "com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.7.3"
-        classpath "com.github.ben-manes:gradle-versions-plugin:0.14.0"
-        classpath "io.fabric.tools:gradle:1.22.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$KOTLIN_VERSION"
+        classpath "io.fabric.tools:gradle:$FABRIC_VERSION"
+        classpath "com.jakewharton.hugo:hugo-plugin:$HUGO_VERSION"
+        classpath "com.getkeepsafe.dexcount:dexcount-gradle-plugin:$DEXCOUNT_VERSION"
+        classpath "com.github.ben-manes:gradle-versions-plugin:$GRADLE_VERSIONS_VERSION"
     }
 }
 
