--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,7 @@ dependencies {
     implementation("com.crashlytics.sdk.android:crashlytics:2.7.1@aar") { transitive = true }
 
     implementation "com.github.bumptech.glide:glide:$GLIDE_VERSION"
+    kapt "com.github.bumptech.glide:compiler:$GLIDE_VERSION"
     implementation "com.github.bumptech.glide:okhttp3-integration:$GLIDE_OKHTTP_VERSION"
 
     implementation "com.jakewharton:butterknife:$BUTTERKNIFE_VERSION"
