--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
         CONSTRAINT_LAYOUT_VERSION = '1.0.2'
         PLAY_SERVICES_VERSION = '10.2.6'
         GLIDE_VERSION = '4.3.1'
-        GLIDE_OKHTTP_VERSION = '1.5.0@aar'
+        GLIDE_OKHTTP_VERSION = '4.1.1'
         BUTTERKNIFE_VERSION = '8.4.0'
         RXREDDIT_VERSION = 'cc6b4ca1f588335499a0eb70f55ee7e2829ecffa'
         RXJAVA_VERSION = '2.1.6'
