--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ buildscript {
     ext {
         COMPILE_SDK_VERSION = 26
         TARGET_SDK_VERSION = 26
-        
+
         // Gradle plugins
         KOTLIN_VERSION = '1.1.61'
         ANDROID_GRADLE_PLUGIN = '3.0.1'
@@ -10,14 +10,14 @@ buildscript {
         DEXCOUNT_VERSION = '0.7.3'
         GRADLE_VERSIONS_VERSION = '0.14.0'
         FABRIC_VERSION = '1.22.2'
-        
+
         // Libraries
         BUILD_TOOLS_VERSION = '26.0.2'
         SUPPORT_LIBRARY_VERSION = '27.0.1'
         CONSTRAINT_LAYOUT_VERSION = '1.0.2'
         PLAY_SERVICES_VERSION = '10.2.6'
-        GLIDE_VERSION = '3.7.0'
-        GLIDE_OKHTTP_VERSION = '1.4.0@aar'
+        GLIDE_VERSION = '4.3.1'
+        GLIDE_OKHTTP_VERSION = '4.1.1'
         BUTTERKNIFE_VERSION = '8.4.0'
         RXREDDIT_VERSION = 'cc6b4ca1f588335499a0eb70f55ee7e2829ecffa'
         RXJAVA_VERSION = '2.1.6'
