--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,7 +100,9 @@ dependencies {
     implementation "com.android.support:cardview-v7:$SUPPORT_LIBRARY_VERSION"
     implementation "com.android.support.constraint:constraint-layout:$CONSTRAINT_LAYOUT_VERSION"
 
-    implementation("com.crashlytics.sdk.android:crashlytics:2.7.1@aar") { transitive = true }
+    implementation("com.crashlytics.sdk.android:crashlytics:$CRASHLYTICS_VERSION@aar") {
+        transitive = true
+    }
 
     implementation "com.github.bumptech.glide:glide:$GLIDE_VERSION"
     kapt "com.github.bumptech.glide:compiler:$GLIDE_VERSION"
