--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
         SUPPORT_LIBRARY_VERSION = '27.0.1'
         CONSTRAINT_LAYOUT_VERSION = '1.0.2'
         PLAY_SERVICES_VERSION = '10.2.6'
+        CRASHLYTICS_VERSION = '2.9.0'
         GLIDE_VERSION = '4.3.1'
         GLIDE_OKHTTP_VERSION = '4.1.1'
         BUTTERKNIFE_VERSION = '8.4.0'
