--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,9 +2,15 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.jakewharton.hugo'
-apply plugin: 'com.getkeepsafe.dexcount'
 apply plugin: 'com.github.ben-manes.versions'
 apply plugin: 'io.fabric'
+
+// TODO: Remove conditional once below issue is resolved
+// https://github.com/KeepSafe/dexcount-gradle-plugin/issues/235
+def taskRequests = getGradle().getStartParameter().getTaskRequests()
+if (!taskRequests.toString().toLowerCase().contains("debug")) {
+    apply plugin: 'com.getkeepsafe.dexcount'
+}
 
 repositories {
     jcenter()
@@ -94,7 +100,9 @@ dependencies {
     implementation "com.android.support:cardview-v7:$SUPPORT_LIBRARY_VERSION"
     implementation "com.android.support.constraint:constraint-layout:$CONSTRAINT_LAYOUT_VERSION"
 
-    implementation("com.crashlytics.sdk.android:crashlytics:2.7.1@aar") { transitive = true }
+    implementation("com.crashlytics.sdk.android:crashlytics:$CRASHLYTICS_VERSION@aar") {
+        transitive = true
+    }
 
     implementation "com.github.bumptech.glide:glide:$GLIDE_VERSION"
     kapt "com.github.bumptech.glide:compiler:$GLIDE_VERSION"
