--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,7 @@ def getLocalProperty(String s) {
 
 dependencies {
     implementation fileTree(include: "*.jar", dir: "libs")
+    androidTestImplementation project(":bypass")
     implementation project(":logging")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$KOTLIN_VERSION"
