--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -98,7 +98,7 @@
 
         <service
             android:name=".notifications.UnreadInboxCheckJobService"
-            android:label="Notification check service"
+            android:label="@string/unread_inbox_notification_service_label"
             android:permission="android.permission.BIND_JOB_SERVICE" />
 
     </application>
