Don't init release signing config

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ android {
     }
 
     signingConfigs {
-        release.initWith(debug)
+        release
     }
 
     Properties releaseKeystoreProperties = getProperties("app/keys/release/keystore.properties")
