--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,12 @@ android {
     }
 
     signingConfigs {
+        debug {
+            storeFile file('keys/debug.keystore')
+            storePassword 'android'
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+        }
         release
     }
 
