--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ buildscript {
         LEAK_CANARY_VERSION = '1.3.1'
         JUNIT_VERSION = '4.12'
         MOCKITO_VERSION = '1.10.19'
+        TESTING_SUPPORT_LIBRARY_VERSION = '1.0.1'
     }
     repositories {
         jcenter()
