--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ buildscript {
         GLIDE_VERSION = '4.8.0'
         GLIDE_OKHTTP_VERSION = '4.8.0'
         BUTTERKNIFE_VERSION = '8.8.1'
-        RXREDDIT_VERSION = '5f815033d6b8bb65e265a1df00c4ba056f39514a'
+        RXREDDIT_VERSION = '0.11'
         RXJAVA_VERSION = '2.2.1'
         RXANDROID_VERSION = '2.1.0'
         TIMESINCETEXTVIEW_VERSION = '1.3'
