add Material Dialogs library

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ android {
 
     defaultConfig {
         applicationId "com.ddiehl.android.htn"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion TARGET_SDK_VERSION
         versionCode 19
         versionName "0.14"
@@ -140,6 +140,7 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
 
     implementation "uk.co.chrisjenx:calligraphy:$CALLIGRAPHY_VERSION"
+    implementation "com.afollestad.material-dialogs:core:$MATERIAL_DIALOGS_VERSION"
 
     implementation "com.hannesdorfmann.fragmentargs:annotation:$FRAGMENTARGS_VERSION"
     kapt "com.hannesdorfmann.fragmentargs:processor:$FRAGMENTARGS_VERSION"
