--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ buildscript {
         TIMESINCETEXTVIEW_VERSION = '1.3'
         DAGGER_VERSION = '2.17'
         CALLIGRAPHY_VERSION = '2.2.0'
+        MATERIAL_DIALOGS_VERSION = '2.0.0-beta4'
         FRAGMENTARGS_VERSION = '3.0.2'
         TIMBER_VERSION = '4.7.1'
         LEAK_CANARY_VERSION = '1.6.1'
