--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,7 @@ android {
         buildConfigField "String", "REDDIT_APP_ID", "\"" + appId + "\""
         def redirectUri = localProperties.getProperty("app_redirect_uri")
         buildConfigField "String", "REDDIT_REDIRECT_URI", "\"" + redirectUri + "\""
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     signingConfigs {
@@ -109,11 +109,11 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$KOTLIN_VERSION"
 
-    implementation "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"
-    implementation "com.android.support:design:$SUPPORT_LIBRARY_VERSION"
-    implementation "com.android.support:recyclerview-v7:$SUPPORT_LIBRARY_VERSION"
-    implementation "com.android.support:cardview-v7:$SUPPORT_LIBRARY_VERSION"
-    implementation "com.android.support.constraint:constraint-layout:$CONSTRAINT_LAYOUT_VERSION"
+    implementation "androidx.appcompat:appcompat:$ANDROIDX_APPCOMPAT"
+    implementation "androidx.recyclerview:recyclerview:$ANDROIDX_RECYCLERVIEW"
+    implementation "androidx.cardview:cardview:$ANDROIDX_CARDVIEW"
+    implementation "androidx.constraintlayout:constraintlayout:$ANDROIDX_CONSTRAINTLAYOUT"
+    implementation "com.google.android.material:material:$ANDROIDX_MATERIAL"
 
     implementation("com.crashlytics.sdk.android:crashlytics:$CRASHLYTICS_VERSION@aar") {
         transitive = true
@@ -152,9 +152,9 @@ dependencies {
     androidTestImplementation "org.mockito:mockito-core:$MOCKITO_VERSION"
     kaptAndroidTest "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
 
-    androidTestImplementation "com.android.support:support-annotations:$SUPPORT_LIBRARY_VERSION"
-    androidTestImplementation "com.android.support.test:runner:$TESTING_SUPPORT_LIBRARY_VERSION"
-    androidTestImplementation "com.android.support.test:rules:$TESTING_SUPPORT_LIBRARY_VERSION"
+    androidTestImplementation 'androidx.annotation:annotation:1.0.0'
+    androidTestImplementation 'androidx.test:runner:1.1.0-beta02'
+    androidTestImplementation 'androidx.test:rules:1.1.0-beta02'
 }
 
 Properties getProperties(def filePath) {
