--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,18 @@ buildscript {
 
         // Libraries
         SUPPORT_LIBRARY_VERSION = '28.0.0'
+        ANDROIDX_APPCOMPAT = '1.0.0'
+        ANDROIDX_RECYCLERVIEW = '1.0.0'
+        ANDROIDX_CARDVIEW = '1.0.0'
+        ANDROIDX_CONSTRAINTLAYOUT = '2.0.0-alpha2'
+        ANDROIDX_MATERIAL = '1.0.0'
+
         CONSTRAINT_LAYOUT_VERSION = '1.1.3'
         PLAY_SERVICES_VERSION = '10.2.6'
         CRASHLYTICS_VERSION = '2.9.5'
         GLIDE_VERSION = '4.8.0'
         GLIDE_OKHTTP_VERSION = '4.8.0'
-        BUTTERKNIFE_VERSION = '8.8.1'
+        BUTTERKNIFE_VERSION = '9.0.0-rc1'
         RXREDDIT_VERSION = '0.11'
         RXJAVA_VERSION = '2.2.1'
         RXANDROID_VERSION = '2.1.0'
