--- a/logging/build.gradle
+++ b/logging/build.gradle
@@ -24,10 +24,10 @@ android {
 }
 
 dependencies {
-    implementation "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"
+    implementation "androidx.appcompat:appcompat:$ANDROIDX_APPCOMPAT"
 
     implementation "com.jakewharton.timber:timber:$TIMBER_VERSION"
-    implementation("com.crashlytics.sdk.android:crashlytics:2.6.8@aar") {
+    implementation("com.crashlytics.sdk.android:crashlytics:$CRASHLYTICS_VERSION@aar") {
         transitive = true
     }
 
