--- a/app/build.gradle
+++ b/app/build.gradle
@@ -147,14 +147,13 @@ dependencies {
     debugImplementation "com.squareup.leakcanary:leakcanary-android:$LEAK_CANARY_VERSION"
     releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$LEAK_CANARY_VERSION"
 
-    // Test dependencies
     androidTestImplementation "junit:junit:$JUNIT_VERSION"
     androidTestImplementation "org.mockito:mockito-core:$MOCKITO_VERSION"
     kaptAndroidTest "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
 
-    androidTestImplementation 'androidx.annotation:annotation:1.0.0'
-    androidTestImplementation 'androidx.test:runner:1.1.0-beta02'
-    androidTestImplementation 'androidx.test:rules:1.1.0-beta02'
+    androidTestImplementation "androidx.annotation:annotation:$ANDROIDX_TEST_ANNOTATIONS"
+    androidTestImplementation "androidx.test:runner:$ANDROIDX_TEST_SUPPORT"
+    androidTestImplementation "androidx.test:rules:$ANDROIDX_TEST_SUPPORT"
 }
 
 Properties getProperties(def filePath) {
