--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,8 @@ buildscript {
         LEAK_CANARY_VERSION = '1.6.1'
         JUNIT_VERSION = '4.12'
         MOCKITO_VERSION = '2.21.0'
-        TESTING_SUPPORT_LIBRARY_VERSION = '1.0.2'
+        ANDROIDX_TEST_ANNOTATIONS = '1.0.0'
+        ANDROIDX_TEST_SUPPORT = '1.1.0-beta02'
     }
     repositories {
         jcenter()
