--- a/app/build.gradle
+++ b/app/build.gradle
@@ -151,7 +151,7 @@ dependencies {
     androidTestImplementation "org.mockito:mockito-core:$MOCKITO_VERSION"
     kaptAndroidTest "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
 
-    androidTestImplementation "androidx.annotation:annotation:$ANDROIDX_TEST_ANNOTATIONS"
+    androidTestImplementation "androidx.annotation:annotation:$ANDROIDX_APPCOMPAT"
     androidTestImplementation "androidx.test:runner:$ANDROIDX_TEST_SUPPORT"
     androidTestImplementation "androidx.test:rules:$ANDROIDX_TEST_SUPPORT"
 }
