--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,6 @@ localProperties.load(project.rootProject.file("local.properties").newDataInputSt
 
 android {
     compileSdkVersion COMPILE_SDK_VERSION
-    buildToolsVersion BUILD_TOOLS_VERSION
 
     useLibrary "org.apache.http.legacy"
 
@@ -55,7 +54,7 @@ android {
         buildConfigField "String", "REDDIT_APP_ID", "\"" + appId + "\""
         def redirectUri = localProperties.getProperty("app_redirect_uri")
         buildConfigField "String", "REDDIT_REDIRECT_URI", "\"" + redirectUri + "\""
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     signingConfigs {
@@ -110,11 +109,11 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$KOTLIN_VERSION"
 
-    implementation "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"
-    implementation "com.android.support:design:$SUPPORT_LIBRARY_VERSION"
-    implementation "com.android.support:recyclerview-v7:$SUPPORT_LIBRARY_VERSION"
-    implementation "com.android.support:cardview-v7:$SUPPORT_LIBRARY_VERSION"
-    implementation "com.android.support.constraint:constraint-layout:$CONSTRAINT_LAYOUT_VERSION"
+    implementation "androidx.appcompat:appcompat:$ANDROIDX_APPCOMPAT"
+    implementation "androidx.recyclerview:recyclerview:$ANDROIDX_RECYCLERVIEW"
+    implementation "androidx.cardview:cardview:$ANDROIDX_CARDVIEW"
+    implementation "androidx.constraintlayout:constraintlayout:$ANDROIDX_CONSTRAINTLAYOUT"
+    implementation "com.google.android.material:material:$ANDROIDX_MATERIAL"
 
     implementation("com.crashlytics.sdk.android:crashlytics:$CRASHLYTICS_VERSION@aar") {
         transitive = true
@@ -148,14 +147,13 @@ dependencies {
     debugImplementation "com.squareup.leakcanary:leakcanary-android:$LEAK_CANARY_VERSION"
     releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$LEAK_CANARY_VERSION"
 
-    // Test dependencies
     androidTestImplementation "junit:junit:$JUNIT_VERSION"
     androidTestImplementation "org.mockito:mockito-core:$MOCKITO_VERSION"
     kaptAndroidTest "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
 
-    androidTestImplementation "com.android.support:support-annotations:$SUPPORT_LIBRARY_VERSION"
-    androidTestImplementation "com.android.support.test:runner:$TESTING_SUPPORT_LIBRARY_VERSION"
-    androidTestImplementation "com.android.support.test:rules:$TESTING_SUPPORT_LIBRARY_VERSION"
+    androidTestImplementation "androidx.annotation:annotation:$ANDROIDX_APPCOMPAT"
+    androidTestImplementation "androidx.test:runner:$ANDROIDX_TEST_SUPPORT"
+    androidTestImplementation "androidx.test:rules:$ANDROIDX_TEST_SUPPORT"
 }
 
 Properties getProperties(def filePath) {
