--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     ext {
         COMPILE_SDK_VERSION = 28
         TARGET_SDK_VERSION = 28
+        MIN_SDK_VERSION = 15
 
         // Gradle plugins
         KOTLIN_VERSION = '1.2.61'
@@ -31,7 +32,6 @@ buildscript {
         TIMESINCETEXTVIEW_VERSION = '1.3'
         DAGGER_VERSION = '2.17'
         CALLIGRAPHY_VERSION = '2.2.0'
-        MATERIAL_DIALOGS_VERSION = '2.0.0-beta4'
         FRAGMENTARGS_VERSION = '3.0.2'
         TIMBER_VERSION = '4.7.1'
         LEAK_CANARY_VERSION = '1.6.1'
