--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     ext {
         COMPILE_SDK_VERSION = 28
         TARGET_SDK_VERSION = 28
+        MIN_SDK_VERSION = 15
 
         // Gradle plugins
         KOTLIN_VERSION = '1.2.61'
