--- a/logging/build.gradle
+++ b/logging/build.gradle
@@ -10,7 +10,7 @@ android {
     compileSdkVersion COMPILE_SDK_VERSION
 
     defaultConfig {
-        minSdkVersion 15
+        minSdkVersion MIN_SDK_VERSION
         targetSdkVersion TARGET_SDK_VERSION
         versionCode 1
         versionName "1.0"
