--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ buildscript {
         MIN_SDK_VERSION = 15
 
         // Gradle plugins
-        KOTLIN_VERSION = '1.2.61'
-        ANDROID_GRADLE_PLUGIN = '3.2.1'
+        KOTLIN_VERSION = '1.3.10'
+        ANDROID_GRADLE_PLUGIN = '3.5.1'
         HUGO_VERSION = '1.2.1'
         DEXCOUNT_VERSION = '0.8.3'
         GRADLE_VERSIONS_VERSION = '0.20.0'
@@ -25,7 +25,7 @@ buildscript {
         CRASHLYTICS_VERSION = '2.9.5'
         GLIDE_VERSION = '4.8.0'
         GLIDE_OKHTTP_VERSION = '4.8.0'
-        BUTTERKNIFE_VERSION = '9.0.0-rc1'
+        BUTTERKNIFE_VERSION = '10.2.1'
         RXREDDIT_VERSION = '0.13'
         RXJAVA_VERSION = '2.2.1'
         RXANDROID_VERSION = '2.1.0'
@@ -33,6 +33,7 @@ buildscript {
         DAGGER_VERSION = '2.17'
         CALLIGRAPHY_VERSION = '2.2.0'
         FRAGMENTARGS_VERSION = '3.0.2'
+        GSON_VERSION = '2.8.5'
         TIMBER_VERSION = '4.7.1'
         LEAK_CANARY_VERSION = '1.6.1'
         JUNIT_VERSION = '4.12'
