--- a/mock-api/build.gradle
+++ b/mock-api/build.gradle
@@ -9,6 +9,7 @@ repositories {
 dependencies {
     implementation "com.github.damien5314.RxReddit:library:$RXREDDIT_VERSION"
     implementation "io.reactivex.rxjava2:rxjava:$RXJAVA_VERSION"
+    implementation "com.google.code.gson:gson:$GSON_VERSION"
 
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$KOTLIN_VERSION"
     testImplementation "junit:junit:$JUNIT_VERSION"
