--- a/build.gradle
+++ b/build.gradle
@@ -14,17 +14,17 @@ buildscript {
 
         // Libraries
         SUPPORT_LIBRARY_VERSION = '28.0.0'
-        ANDROIDX_APPCOMPAT = '1.0.0'
-        ANDROIDX_RECYCLERVIEW = '1.0.0'
+        ANDROIDX_APPCOMPAT = '1.1.0'
+        ANDROIDX_RECYCLERVIEW = '1.1.0'
         ANDROIDX_CARDVIEW = '1.0.0'
-        ANDROIDX_CONSTRAINTLAYOUT = '2.0.0-alpha2'
+        ANDROIDX_CONSTRAINTLAYOUT = '2.0.0-beta4'
         ANDROIDX_MATERIAL = '1.0.0'
 
         CONSTRAINT_LAYOUT_VERSION = '1.1.3'
         PLAY_SERVICES_VERSION = '10.2.6'
         CRASHLYTICS_VERSION = '2.9.5'
-        GLIDE_VERSION = '4.8.0'
-        GLIDE_OKHTTP_VERSION = '4.8.0'
+        GLIDE_VERSION = '4.9.0'
+        GLIDE_OKHTTP_VERSION = '4.9.0'
         BUTTERKNIFE_VERSION = '10.2.1'
         RXREDDIT_VERSION = '0.13'
         RXJAVA_VERSION = '2.2.1'
