--- a/build.gradle
+++ b/build.gradle
@@ -2,23 +2,23 @@ buildscript {
     ext {
         COMPILE_SDK_VERSION = 28
         TARGET_SDK_VERSION = 28
-        MIN_SDK_VERSION = 15
+        MIN_SDK_VERSION = 21
 
         // Gradle plugins
-        KOTLIN_VERSION = '1.3.10'
-        ANDROID_GRADLE_PLUGIN = '3.5.1'
+        KOTLIN_VERSION = '1.4.10'
+        ANDROID_GRADLE_PLUGIN = '4.1.0'
         HUGO_VERSION = '1.2.1'
         DEXCOUNT_VERSION = '0.8.3'
         GRADLE_VERSIONS_VERSION = '0.20.0'
-        FABRIC_VERSION = '1.25.4'
 
         // Libraries
         SUPPORT_LIBRARY_VERSION = '28.0.0'
-        ANDROIDX_APPCOMPAT = '1.1.0'
+        ANDROIDX_APPCOMPAT = '1.2.0'
+        ANDROIDX_ANNOTATION = '1.1.0'
         ANDROIDX_RECYCLERVIEW = '1.1.0'
         ANDROIDX_CARDVIEW = '1.0.0'
-        ANDROIDX_CONSTRAINTLAYOUT = '2.0.0-beta4'
-        ANDROIDX_MATERIAL = '1.0.0'
+        ANDROIDX_CONSTRAINTLAYOUT = '2.0.2'
+        ANDROIDX_MATERIAL = '1.2.1'
 
         CONSTRAINT_LAYOUT_VERSION = '1.1.3'
         PLAY_SERVICES_VERSION = '10.2.6'
@@ -27,10 +27,10 @@ buildscript {
         GLIDE_OKHTTP_VERSION = '4.9.0'
         BUTTERKNIFE_VERSION = '10.2.1'
         RXREDDIT_VERSION = '0.13'
-        RXJAVA_VERSION = '2.2.1'
+        RXJAVA_VERSION = '2.2.8'
         RXANDROID_VERSION = '2.1.0'
         TIMESINCETEXTVIEW_VERSION = '1.3'
-        DAGGER_VERSION = '2.17'
+        DAGGER_VERSION = '2.24'
         CALLIGRAPHY_VERSION = '2.2.0'
         FRAGMENTARGS_VERSION = '3.0.2'
         GSON_VERSION = '2.8.5'
@@ -39,20 +39,25 @@ buildscript {
         JUNIT_VERSION = '4.12'
         MOCKITO_VERSION = '2.21.0'
         ANDROIDX_TEST_SUPPORT = '1.1.0-beta02'
+        GOOGLE_SERVICES_PLUGIN_VERSION = '4.3.4'
+        FIREBASE_CRASHLYTICS_PLUGIN_VERSION = '2.3.0'
+        FIREBASE_CRASHLYTICS_VERSION = '17.2.2'
+        FIREBASE_ANALYTICS_VERSION = '17.6.0'
+        SWIPE_REFRESH_LAYOUT_VERSION = '1.1.0'
     }
     repositories {
         jcenter()
         google()
-        maven { url 'https://maven.fabric.io/public' }
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$ANDROID_GRADLE_PLUGIN"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$KOTLIN_VERSION"
-        classpath "io.fabric.tools:gradle:$FABRIC_VERSION"
         classpath "com.jakewharton.hugo:hugo-plugin:$HUGO_VERSION"
         classpath "com.getkeepsafe.dexcount:dexcount-gradle-plugin:$DEXCOUNT_VERSION"
         classpath "com.github.ben-manes:gradle-versions-plugin:$GRADLE_VERSIONS_VERSION"
+        classpath "com.google.gms:google-services:$GOOGLE_SERVICES_PLUGIN_VERSION"
+        classpath "com.google.firebase:firebase-crashlytics-gradle:$FIREBASE_CRASHLYTICS_PLUGIN_VERSION"
     }
 }
 
