--- a/logging/build.gradle
+++ b/logging/build.gradle
@@ -2,8 +2,7 @@ apply plugin: 'com.android.library'
 
 repositories {
     jcenter()
-    maven { url "https://maven.google.com/" }
-    maven { url 'https://maven.fabric.io/public' }
+    google()
 }
 
 android {
@@ -25,12 +24,9 @@ android {
 
 dependencies {
     implementation "androidx.appcompat:appcompat:$ANDROIDX_APPCOMPAT"
-
     implementation "com.jakewharton.timber:timber:$TIMBER_VERSION"
-    implementation("com.crashlytics.sdk.android:crashlytics:$CRASHLYTICS_VERSION@aar") {
-        transitive = true
-    }
-
+    implementation "com.google.firebase:firebase-crashlytics:$FIREBASE_CRASHLYTICS_VERSION"
+    implementation "com.google.firebase:firebase-analytics:$FIREBASE_ANALYTICS_VERSION"
     testImplementation "junit:junit:$JUNIT_VERSION"
     testImplementation "org.mockito:mockito-core:$MOCKITO_VERSION"
 }
