wip trying to play DASH video with ExoPlayer

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,7 +109,9 @@ dependencies {
     kapt "com.hannesdorfmann.fragmentargs:processor:$FRAGMENTARGS_VERSION"
     implementation "com.google.code.gson:gson:$GSON_VERSION"
     implementation "com.jakewharton.timber:timber:$TIMBER_VERSION"
-    implementation "com.google.android.exoplayer:exoplayer:$EXOPLAYER_VERSION"
+    implementation "com.google.android.exoplayer:exoplayer-core:$EXOPLAYER_VERSION"
+    implementation "com.google.android.exoplayer:exoplayer-dash:$EXOPLAYER_VERSION"
+    implementation "com.google.android.exoplayer:exoplayer-ui:$EXOPLAYER_VERSION"
     debugImplementation "com.squareup.leakcanary:leakcanary-android:$LEAK_CANARY_VERSION"
     releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$LEAK_CANARY_VERSION"
     androidTestImplementation "junit:junit:$JUNIT_VERSION"
