Update to RxJava3, RxReddit 0.14

--- a/build.gradle
+++ b/build.gradle
@@ -22,9 +22,9 @@ buildscript {
         CRASHLYTICS_VERSION = '2.9.5'
         GLIDE_VERSION = '4.9.0'
         GLIDE_OKHTTP_VERSION = '4.9.0'
-        RXREDDIT_VERSION = '0.13'
-        RXJAVA_VERSION = '2.2.8'
-        RXANDROID_VERSION = '2.1.0'
+        RXREDDIT_VERSION = '5419acba8e9fb4ad9814d98229b471bfc9a393a3'
+        RXJAVA_VERSION = '3.0.0'
+        RXANDROID_VERSION = '3.0.0'
         TIMESINCETEXTVIEW_VERSION = '1.3'
         DAGGER_VERSION = '2.24'
         CALLIGRAPHY_VERSION = '2.2.0'
