update rxreddit and convert SettingsManager to kotlin

--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ buildscript {
         CRASHLYTICS_VERSION = '2.9.5'
         GLIDE_VERSION = '4.9.0'
         GLIDE_OKHTTP_VERSION = '4.9.0'
-        RXREDDIT_VERSION = '0.15'
+        RXREDDIT_VERSION = '085de07425342e5f1ced971207193969387ba6c0'
         RXJAVA_VERSION = '3.0.0'
         RXANDROID_VERSION = '3.0.0'
         TIMESINCETEXTVIEW_VERSION = '1.3'
