--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 buildscript {
     ext {
-        COMPILE_SDK_VERSION = 29
-        TARGET_SDK_VERSION = 29
+        COMPILE_SDK_VERSION = 31
+        TARGET_SDK_VERSION = 31
         MIN_SDK_VERSION = 21
 
         // Gradle plugins
-        KOTLIN_VERSION = '1.4.20'
-        ANDROID_GRADLE_PLUGIN = '4.1.1'
+        KOTLIN_VERSION = '1.6.21'
+        ANDROID_GRADLE_PLUGIN = '4.1.3'
 
         // Libraries
         SUPPORT_LIBRARY_VERSION = '28.0.0'
@@ -31,7 +31,7 @@ buildscript {
         FRAGMENTARGS_VERSION = '3.0.2'
         GSON_VERSION = '2.8.5'
         TIMBER_VERSION = '4.7.1'
-        EXOPLAYER_VERSION = '2.12.0'
+        EXOPLAYER_VERSION = '2.18.0'
         LEAK_CANARY_VERSION = '1.6.1'
         JUNIT_VERSION = '4.12'
         MOCKITO_VERSION = '2.21.0'
@@ -43,7 +43,7 @@ buildscript {
         SWIPE_REFRESH_LAYOUT_VERSION = '1.1.0'
     }
     repositories {
-        jcenter()
+        mavenCentral()
         google()
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
     }
