--- a/mock-api/build.gradle
+++ b/mock-api/build.gradle
@@ -2,8 +2,13 @@ apply plugin: 'java'
 apply plugin: 'kotlin'
 
 repositories {
-    jcenter()
+    mavenCentral()
     maven { url "https://jitpack.io" }
+}
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 }
 
 dependencies {
