--- a/build.gradle
+++ b/build.gradle
@@ -1,49 +1,48 @@
 buildscript {
     ext {
-        COMPILE_SDK_VERSION = 29
-        TARGET_SDK_VERSION = 29
+        COMPILE_SDK_VERSION = 31
+        TARGET_SDK_VERSION = 31
         MIN_SDK_VERSION = 21
 
         // Gradle plugins
-        KOTLIN_VERSION = '1.4.20'
-        ANDROID_GRADLE_PLUGIN = '4.1.1'
+        KOTLIN_VERSION = '1.6.21'
+        ANDROID_GRADLE_PLUGIN = '4.1.3'
 
         // Libraries
-        SUPPORT_LIBRARY_VERSION = '28.0.0'
-        ANDROIDX_APPCOMPAT = '1.2.0'
-        ANDROIDX_ANNOTATION = '1.1.0'
+        ANDROIDX_APPCOMPAT = '1.4.2'
+        ANDROIDX_ANNOTATION = '1.4.0'
         ANDROIDX_RECYCLERVIEW = '1.1.0'
         ANDROIDX_CARDVIEW = '1.0.0'
-        ANDROIDX_CONSTRAINTLAYOUT = '2.0.2'
-        ANDROIDX_MATERIAL = '1.2.1'
+        ANDROIDX_CONSTRAINTLAYOUT = '2.1.4'
+        ANDROIDX_MATERIAL = '1.6.1'
 
         CONSTRAINT_LAYOUT_VERSION = '1.1.3'
         PLAY_SERVICES_VERSION = '10.2.6'
         CRASHLYTICS_VERSION = '2.9.5'
-        GLIDE_VERSION = '4.9.0'
-        GLIDE_OKHTTP_VERSION = '4.9.0'
+        GLIDE_VERSION = '4.12.0'
+        GLIDE_OKHTTP_VERSION = '4.12.0'
         RXREDDIT_VERSION = '0.17'
         RXJAVA_VERSION = '3.0.0'
         RXANDROID_VERSION = '3.0.0'
         TIMESINCETEXTVIEW_VERSION = '1.3'
-        DAGGER_VERSION = '2.24'
+        DAGGER_VERSION = '2.41'
         CALLIGRAPHY_VERSION = '2.2.0'
         FRAGMENTARGS_VERSION = '3.0.2'
-        GSON_VERSION = '2.8.5'
+        GSON_VERSION = '2.8.9'
         TIMBER_VERSION = '4.7.1'
-        EXOPLAYER_VERSION = '2.12.0'
+        EXOPLAYER_VERSION = '2.18.0'
         LEAK_CANARY_VERSION = '1.6.1'
-        JUNIT_VERSION = '4.12'
-        MOCKITO_VERSION = '2.21.0'
-        ANDROIDX_TEST_SUPPORT = '1.1.0-beta02'
+        JUNIT_VERSION = '4.13.2'
+        MOCKITO_VERSION = '3.9.0'
+        ANDROIDX_TEST_SUPPORT = '1.5.0-alpha01'
         GOOGLE_SERVICES_PLUGIN_VERSION = '4.3.4'
         FIREBASE_CRASHLYTICS_PLUGIN_VERSION = '2.3.0'
-        FIREBASE_CRASHLYTICS_VERSION = '17.2.2'
-        FIREBASE_ANALYTICS_VERSION = '17.6.0'
+        FIREBASE_CRASHLYTICS_VERSION = '18.2.11'
+        FIREBASE_ANALYTICS_VERSION = '21.0.0'
         SWIPE_REFRESH_LAYOUT_VERSION = '1.1.0'
     }
     repositories {
-        jcenter()
+        mavenCentral()
         google()
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
     }
