--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ buildscript {
         CRASHLYTICS_VERSION = '2.9.5'
         GLIDE_VERSION = '4.12.0'
         GLIDE_OKHTTP_VERSION = '4.12.0'
-        RXREDDIT_VERSION = '0.17'
+        RXREDDIT_VERSION = 'ab85d020d921291c786777509d7c649d797e4b29'
         RXJAVA_VERSION = '3.0.0'
         RXANDROID_VERSION = '3.0.0'
         TIMESINCETEXTVIEW_VERSION = '1.3'
