--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ buildscript {
         CRASHLYTICS_VERSION = '2.9.5'
         GLIDE_VERSION = '4.12.0'
         GLIDE_OKHTTP_VERSION = '4.12.0'
-        RXREDDIT_VERSION = '638b36b73d5bfa24c18fff77f6fa5f109f1771f3'
+        RXREDDIT_VERSION = '0.18'
         RXJAVA_VERSION = '3.0.0'
         RXANDROID_VERSION = '3.0.0'
         TIMESINCETEXTVIEW_VERSION = '1.3'
