--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ buildscript {
         CRASHLYTICS_VERSION = '2.9.5'
         GLIDE_VERSION = '4.12.0'
         GLIDE_OKHTTP_VERSION = '4.12.0'
-        RXREDDIT_VERSION = '0.17'
+        RXREDDIT_VERSION = '0.18'
         RXJAVA_VERSION = '3.0.0'
         RXANDROID_VERSION = '3.0.0'
         TIMESINCETEXTVIEW_VERSION = '1.3'
@@ -31,6 +31,7 @@ buildscript {
         GSON_VERSION = '2.8.9'
         TIMBER_VERSION = '4.7.1'
         EXOPLAYER_VERSION = '2.18.0'
+        TOUCH_IMAGEVIEW_VERSION = '3.2.1'
         LEAK_CANARY_VERSION = '1.6.1'
         JUNIT_VERSION = '4.13.2'
         MOCKITO_VERSION = '3.9.0'
