--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 
         // Libraries
         ANDROIDX_APPCOMPAT = '1.4.2'
-        ANDROIDX_ANNOTATION = '1.4.0'
+        ANDROIDX_ANNOTATION = '1.3.0' // 1.4.0 causes version conflict with androidx.test:rules:1.4.1-alpha07
         ANDROIDX_RECYCLERVIEW = '1.1.0'
         ANDROIDX_CARDVIEW = '1.0.0'
         ANDROIDX_CONSTRAINTLAYOUT = '2.1.4'
@@ -35,7 +35,8 @@ buildscript {
         LEAK_CANARY_VERSION = '1.6.1'
         JUNIT_VERSION = '4.13.2'
         MOCKITO_VERSION = '3.9.0'
-        ANDROIDX_TEST_SUPPORT = '1.5.0-alpha01'
+        ANDROIDX_TEST_RUNNER_VERSION = '1.5.0-alpha04'
+        ANDROIDX_TEST_RULES_VERSION = '1.4.1-alpha07'
         GOOGLE_SERVICES_PLUGIN_VERSION = '4.3.4'
         FIREBASE_CRASHLYTICS_PLUGIN_VERSION = '2.3.0'
         FIREBASE_CRASHLYTICS_VERSION = '18.2.11'
